site/sass/_post.scss
@import "variables";
@import "tree";

.post {
    display: block;
    width: 100%;
    text-align: left;

    &:not(:last-of-type) {
        border-bottom: 1px solid var(--border-color);
        padding-bottom: 20px;
    }

    &-title {
        --border: 3px dotted var(--accent);
        position: relative;
        color: var(--accent);
        margin: 8px 0;
        padding-bottom: 10px;
        border-bottom: var(--border);

        &:after {
            content: '';
            position: absolute;
            bottom: 2px;
            display: block;
            width: 100%;
            border-bottom: var(--border);
        }

        a {
            text-decoration: none;
        }

        &-sub {
            color: var(--accent-secondary) !important;
            --border: 2.5px dotted var(--accent-secondary) !important;
            padding-top: 15px !important;
        }
    }

    .toc {
	margin: 8px 0px;

	a {
	    text-decoration-thickness: 0.5px;
	}
    }

    &-disclaimer {
	float: right;
	color: #b0b0b0;
	margin: 8px 0px 8px 12px;
	font-size: 0.75rem;
	text-align: right;
	display: inline-block;
	max-width: 35%;

        @media(max-width: $tablet-max-width) {
	    max-width: 45%;
	}

	@media(max-width: $phone-max-width) {
	    text-align: left;
	}
    }

    &-meta {
	&-list:first-of-type {
	    padding-top: 0px;
	}

	&-list + &-list {
	    padding-top: 15px;
	}

	&-page {
            font-size: 1rem;
            color: var(--accent-alpha-70);
	}

	&-list {
            color: var(--color);

            &.meta-title {
		color: var(--accent-secondary);
            }
	}

	&-title{
	    padding-left: 30px;
            color: var(--accent-secondary);
	}
    }


    &-content:not(.post-in-list) {
        h1, h2, h3, h4, h5, h6 {
            .zola-anchor {
                font-size: inherit;
                visibility: hidden;
                margin-left: 0.5rem;
                vertial-align: 1%;
                text-decoration: none;
                border-bottom-color: transparent;
                cursor: pointer;
            }

            &:hover {
                .zola-anchor {
                    visibility: visible;
                }
            }

            @media(max-width: $phone-max-width) {
                visibility: visible;
            }
        }
    }

    ol {
	list-style: none;
        padding-left: 20px;
	margin: 8px 0px;

	li {
	    padding-left: 5px;
	}

	li:before {
	    content: counter(list-item) '. ';
            position: absolute;
            left: -20px;
            color: var(--accent);
	}
    }

    &-content {
	// Puts content below floating disclaimer.
	clear: both;

        h1, h2, h3, h4, h5, h6 {
            font-size: $font-size + 0.1rem;
            color: var(--accent-secondary);

        }

	p {
	    margin: 1.2em 0;
	}

        h1:before {
            content: "# ";
        }

        h2:before {
            content: "## ";
        }

        h3:before {
            content: "### ";
        }

        // jetbrainsmono only goes up to 4 ligatures
        h4:before,
        h5:before,
        h6:before {
            content: "#### ";
        }

	blockquote {
	    width: 90%;
	    margin: 0px auto;

	    p {
		background: #2b303b;
		padding: 5px 5px 5px 30px;
		box-shadow: -10px 0px 0px 0px var(--accent-alpha-70);
		border-radius: 2px;
	    }
	}

        code {
            font-family: 'BerkeleyMono', Menlo, DejaVu Sans Mono, Monaco, Consolas, Ubuntu Mono, monospace;
            font-feature-settings: normal;
            background: #2b303b;
            padding: 0.5px 2px;
            color: var(--accent-alpha-70);
            margin: 0px;
            font-size: 0.95rem;
            border-radius: 1px;
        }
        pre {
            font-family: 'BerkeleyMono', Menlo, DejaVu Sans Mono, Monaco, Consolas, Ubuntu Mono, monospace;
            font-size: 0.95rem;
            padding: 15px 10px;
            border-radius: $corner-radius;
            border: 1px solid var(--border-color);
            overflow: auto;

            code {
                color: inherit;
                background: none !important;
                margin: 0;
                padding: 0;
                font-size: inherit;
                border: none;
            }
        }

	.footnote-reference {
	    margin: 0px 0px 0px 1px;
	    // Ensures `[X]` wraps together.
	    display: inline-block;

	    a {
		text-decoration-thickness: 0.5px;
	    }

	    a:before {
		content: "[";
		display:inline-block;
		text-decoration: none;
	    }

	    a:after {
		content: "]";
		display:inline-block;
		text-decoration: none;
	    }
	}

	.figure {
	    display: flex;
	    flex-direction: column;
	    img {
		margin: 0px auto;
	    }
	    &-description {
		color: #b0b0b0;
		margin: 8px 0px;
		font-size: 0.9rem;
		text-align: center;
	    }
	}

	.footnote-definition {
	    display: flex;
	    color: #b0b0b0;

	    .footnote-definition-label {
		margin-right: 5px;
	    }

	    .footnote-definition-label:before {
		content: "[";
	    }

	    .footnote-definition-label:after {
		content: "]";
	    }

	    p {
		margin: 0px;
		font-size: 0.8rem;
		// To prevent overflow at high zoom.
		word-break: break-word;
		a {
		    text-decoration-thickness: 0.5px;
		}

	    }
	}

	table {
	    border-collapse: collapse;
	    border: 2px solid;
	    // Hardcoded --accent-secondary-alpha-20 because borders overlap
	    border-color: #3b2e2e;

	    thead {
		border-bottom: 2px solid;
		border-color: #3b2e2e;
		background: #2b303b;
	    }

	    th, td {
		padding: 5px 8px;
	    }

	    tbody {
		tr:not(:last-child) {
		    border-bottom: 1.5px dashed;
		    border-color: #3b2e2e;
		}

		td:not(:last-child) {
		    border-right: 1px solid;
		    border-color: #3b2e2e;
		}
	    }

	    th {
		color: var(--accent-secondary);
		font-weight: normal;
	    }

	    margin: 0px auto;
	}

	svg {
	    width: auto;
	    height: auto;
	    margin: 0px auto;
	    max-width: 100%;
	}
    }

    .pre-list {
        border-bottom: 1px solid var(--border-secondary-color);
    }

    &-list {
	list-style: none;
	margin-left: 0px;
	margin: 8px 0px;
    }

    &-taxonomy {
	padding-left: 30px;
    }

    &-tag {
	font-style: oblique;
    }

    &-series {
	font-style: bold;
    }
}


.post-content ul,
.taxonomy-list {
    list-style: none;
    padding-left: 10px;
    margin: 8px 0px;

    li {
	padding-left: 10px;
    }

    li:before {
	content: '*';
	position: absolute;
	left: -10px;
	color: var(--accent);
    }
}

